# gangway

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/issue_template/: bug_report.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md
docs/superpowers/plans/: 2026-06-25-gangway-name-reservation.md  2026-06-25-github-repository-and-ci-setup.md  2026-06-25-task-1-reviewer-fixes.md  2026-06-26-cloudflare-tunnel-integration-fixes.md  2026-06-26-cloudflare-tunnel-integration.md  2026-06-26-final-code-review-fixes.md  2026-06-26-fix-task-3-job-manager.md  2026-06-26-mcp-server-and-jobs.md  2026-06-26-repository-polish.md
docs/superpowers/specs/: 2026-06-25-gangway-name-reservation-design.md  2026-06-25-github-repository-and-ci-setup-design.md  2026-06-26-mcp-server-and-jobs-design.md
src/gangway/: __main__.py  cli.py  main.py
src/gangway/core/: config.py  files.py  jobs.py  sandbox.py  state.py  tunnel.py
src/gangway/server/: __init__.py  mcp.py
tests/: test_cli.py  test_config.py  test_files.py  test_jobs.py  test_main.py  test_mcp.py  test_sandbox.py  test_state.py  test_tunnel.py
