[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gangway"
version = "0.1.0"
description = "A smart Agent-to-Server Bridge connecting AI agents to remote environments as an MCP server and REST API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Abdullah Mansour", email = "abdullahmansour.marketing@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/abdullahmansour/gangway"
