[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gangway"
version = "0.1.2"
description = "A smart Agent-to-Server Bridge connecting AI agents to remote environments as an MCP server and REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdullah Mansour", email = "abdullahmansour.marketing@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli; python_version < '3.11'",
    "psutil>=5.9.0",
    "mcp>=1.2.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
]

[project.scripts]
gangway = "gangway.cli:main"


[project.urls]
Homepage = "https://github.com/aim9sour/gangway"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

